Feat: fast save record
